--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # built application files
 *.apk
 *.ap_
@@ -18,3 +20,4 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+.settings/
