--- a/app-android/.project
+++ b/app-android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>imemory-android</name>
+	<name>memmo-android</name>
 	<comment></comment>
 	<projects>
 	</projects>
