memmo #3(enyu): add the user permission for creating directory, and add SD card check.

--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -12,5 +12,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AlbumActivity"/>
+
     </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
