--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -12,7 +12,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AlbumActivity"/>
-
+        <activity android:name=".AlbumListActivity"/>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
