take a photo via camera and save to sdcard

--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -15,4 +15,5 @@
         <activity android:name=".AlbumListActivity"/>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" />
 </manifest>
