--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -12,6 +12,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".AlbumActivity"/>
+        <activity android:name=".GalleryPhotoViewer">
+        </activity>
+        <activity android:name=".AlbumActivity"/>
         <activity android:name=".AlbumListActivity"/>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
