--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="zhang.abel.memmo.android"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:targetSdkVersion="17" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="zhang.abel.memmo.android.MainActivity"
                   android:label="@string/app_name">
