--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -17,6 +17,13 @@
         </activity>
         <activity android:name=".AlbumActivity"/>
         <activity android:name=".AlbumListActivity"/>
+        <activity android:name=".NotificationActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-feature android:name="android.hardware.camera" />
