--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -12,7 +12,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlbumActivity"/>
+        <activity android:name=".AlbumListView"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.AlbumListView" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".GalleryPhotoViewer">
         </activity>
         <activity android:name=".AlbumActivity"/>
