--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:targetSdkVersion="17" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="zhang.abel.memmo.android.MainActivity"
+        <activity android:name="zhang.abel.memmo.android.NewMainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
