Enyu: add a new page createalbum.xml will use it in the pop up window, and finished create album logic.

--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -19,6 +19,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".NewCreateAlbumActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.NewCreateAlbumActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".GalleryPhotoViewer">
         </activity>
         <activity android:name=".AlbumActivity"/>
