--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".GalleryPhotoViewer">
         </activity>
         <activity android:name=".AlbumActivity"/>
+        <activity android:name=".NewAlbumActivity"/>
         <activity android:name=".AlbumListActivity"/>
         <activity android:name=".NotificationActivity"/>
         <activity android:name=".NotificationDetail"/>
