--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -5,22 +5,15 @@
       android:versionName="1.0">
     <uses-sdk android:targetSdkVersion="17" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="zhang.abel.memmo.android.NewMainActivity"
+        <activity android:name=".AlbumListActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlbumListView"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.AlbumListView" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
 
-        <activity android:name=".NewCreateAlbumActivity"
+        <activity android:name=".AlbumCreateActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.NewCreateAlbumActivity" />
@@ -30,7 +23,7 @@
 
         <activity android:name=".GalleryPhotoViewer">
         </activity>
-        <activity android:name=".NewAlbumActivity"/>
+        <activity android:name=".AlbumActivity"/>
         <activity android:name=".NotificationSettingActivity"/>
         <receiver android:name=".NotificationReceiver"/>
     </application>
