--- a/app-android/AndroidManifest.xml
+++ b/app-android/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:targetSdkVersion="17" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+
         <activity android:name=".AlbumListActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,16 +14,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".AlbumCreateActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.NewCreateAlbumActivity" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".GalleryPhotoViewer">
-        </activity>
+        <activity android:name=".AlbumCreateActivity"/>
+        <activity android:name=".GalleryPhotoViewer"/>
         <activity android:name=".AlbumActivity"/>
         <activity android:name=".NotificationSettingActivity"/>
         <receiver android:name=".NotificationReceiver"/>
